--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
         "type": "image/png"
       }
     ],
+    "id": "/btnUp/",
     "screenshots": [
       {
         "src": "images/screen-645x376.png",
@@ -27,7 +28,7 @@
         "type": "image/png"
       }
     ],
-    "start_url": "https://natalia-orlova.github.io/btnUp/",
+    "start_url": "https://natalia-orlova.github.io/",
     "display": "fullscreen",
     "background_color": "#fff",
     "theme_color": "#4CAF50"
