--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,6 @@
         "type": "image/png"
       }
     ],
-    "id": "/btnUp/",
     "screenshots": [
       {
         "src": "images/screen-645x376.png",
@@ -28,7 +27,7 @@
         "type": "image/png"
       }
     ],
-    "start_url": "https://natalia-orlova.github.io/",
+    "start_url": "https://natalia-orlova.github.io/btnUp",
     "display": "fullscreen",
     "background_color": "#fff",
     "theme_color": "#4CAF50"
