--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,7 @@
         "type": "image/png"
       }
     ],
-    "start_url": "https://natalia-orlova.github.io/btnUp",
+    "start_url": "https://natalia-orlova.github.io/btnUp/",
     "display": "fullscreen",
     "background_color": "#fff",
     "theme_color": "#4CAF50"
