--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
     "start_url": "https://natalia-orlova.github.io/btnUp/",
     "display": "fullscreen",
     "background_color": "#fff",
-    "theme_color": "#4CAF50"
+    "theme_color": "#4CAF50",
+    "firefox_add_to_homescreen": true
   }
   
